--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,6 +1,7 @@
-{% extends "layout.html" %} {% block title %} Page Not Found {% endblock %} {%
-block main %}
-
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Page Not Found {% endblock %} 
+{% block main %}
 <div
   class="flex flex-col justify-center items-center py-24 px-6 mx-auto h-screen xl:px-0 dark:bg-gray-900">
   <div class="block md:max-w-lg">
