--- a/src/templates/admin/user-table.html
+++ b/src/templates/admin/user-table.html
@@ -2,31 +2,18 @@
   class="min-w-full divide-y divide-gray-200 table-fixed dark:divide-gray-600">
   <thead class="bg-gray-100 dark:bg-gray-700">
     <tr>
+      {% for col in table_columns %}
       <th
         scope="col"
         class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
-        Name
+        {{ col }}
       </th>
-      <th
-        scope="col"
-        class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
-        Position
-      </th>
-      <th
-        scope="col"
-        class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
-        Role
-      </th>
-      <th
-        scope="col"
-        class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400">
-        Actions
-      </th>
+      {% endfor %}
     </tr>
   </thead>
   <tbody
     class="bg-white divide-y divide-gray-200 dark:bg-gray-800 dark:divide-gray-700">
-    {% for user in users %}
+    {% for user in users.items %}
     <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
       <td class="flex items-center p-4 mr-12 space-x-6 whitespace-nowrap">
         {% if user.avatar %}
@@ -61,11 +48,11 @@
       </td>
       <td
         class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white capitalize">
-        {{ employment_data[user.id].position if employment_data[user.id] else
-        'N/A' }}
+        <!-- prettier-ignore -->
+        {{ employment_data[user.id][0].position if employment_data[user.id] else 'N/A' }}
       </td>
       <td
-        class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white capitalize">
+        class="p-4 text-base font-normal text-gray-900 whitespace-nowrap dark:text-white capitalize">
         {{ user.role }}
       </td>
 
