--- a/src/templates/confirm-email.html
+++ b/src/templates/confirm-email.html
@@ -1,5 +1,7 @@
-{% extends "layout.html" %} {% block title %} Confirm Email {% endblock %} {%
-block main %}
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Confirm Email {% endblock %} 
+{% block main %}
 
 <section class="bg-white dark:bg-gray-900">
   <div
