--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,5 +1,8 @@
-{% extends "layout.html" %} {% block title %} Dashboard {% endblock %} {% block
-main %}
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Dashboard {% endblock %} 
+{% block main %}
+
 <div class="antialiased bg-gray-50 dark:bg-gray-900">
   {% include "includes/dashboard-header.html" %} {% include
   "includes/dashboard-sidebar.html" %}
