--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,8 @@
-{% extends "layout.html" %} {% block title %} Daily Time Recorder {% endblock %}
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Daily Time Recorder {% endblock %}
 {% block main %}
+
 <main class="w-full py-12 md:py-24 mx-auto max-w-[1440px] mt-16">
   <div class="container px-4 md:px-6">
     <div
