--- a/src/templates/terms-and-conditions.html
+++ b/src/templates/terms-and-conditions.html
@@ -1,5 +1,7 @@
-{% extends "layout.html" %} {% block title %} Terms and Conditions {% endblock
-%} {% block main %}
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Terms and Conditions {% endblock %} 
+{% block main %}
 
 <div class="w-full max-w-4xl mx-auto py-12 md:py-20">
   <div class="px-4 md:px-6">
