--- a/src/templates/time-schedule.html
+++ b/src/templates/time-schedule.html
@@ -1,5 +1,8 @@
-{% extends "layout.html" %} {% block title %} Time Schedule {% endblock %} {%
-block main %}
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Time Schedule {% endblock %} 
+{% block main %}
+
 <div class="flex min-h-screen w-full">
   {% include "includes/dashboard-sidebar.html" %}
   <div class="flex-1 flex flex-col w-full">
