--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -1,5 +1,7 @@
-{% extends "layout.html" %} {% block title %} Internal Server Error - 500 {%
-endblock %} {% block main %}
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Internal Server Error - 500 {% endblock %} 
+{% block main %}
 
 <div
   class="flex flex-col justify-center items-center py-24 px-6 mx-auto h-screen xl:px-0 dark:bg-gray-900">
