--- a/src/templates/admin/admin.html
+++ b/src/templates/admin/admin.html
@@ -1,9 +1,12 @@
-{% extends "layout.html" %} {% block title %} Admin {% endblock %} {% block main
-%}
+<!-- prettier-ignore -->
+{% extends "layout.html" %}
+{% block title %} Admin {% endblock %} 
+{% block main %}
 
 <div class="antialiased bg-gray-50 dark:bg-gray-900">
-  {% include "includes/dashboard-header.html" %} {% include
-  "includes/dashboard-sidebar.html" %}
+  <!-- prettier-ignore -->
+  {% include "includes/dashboard-header.html" %} 
+  {% include "includes/dashboard-sidebar.html" %}
   <main
     class="h-auto mt-[76px] max-w-[calc(1440px_-_15rem)] md:ml-60 2xl:mx-auto xl:px-4">
     {% include "admin/user-table-header.html" %}
@@ -18,7 +21,7 @@
       </div>
     </div>
 
-    {% include "includes/pagination.html" %}
+    {% include "admin/pagination.html" %}
 
     <!-- Add User Modal -->
     {% include "admin/add-user-modal.html" %}
