--- a/src/templates/daily-logs.html
+++ b/src/templates/daily-logs.html
@@ -1,5 +1,8 @@
-{% extends "layout.html" %} {% block title %} Daily Logs {% endblock %} {% block
-main %}
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Daily Logs {% endblock %} 
+{% block main %}
+
 <div class="flex min-h-screen w-full">
   {% include "includes/dashboard-sidebar.html" %}
   <div class="flex-1 flex flex-col w-full">
@@ -7,4 +10,5 @@ main %}
     <main class="flex-1 p-6 md:p-8"></main>
   </div>
 </div>
+
 {% endblock %}
