--- a/src/templates/forgot-password.html
+++ b/src/templates/forgot-password.html
@@ -1,5 +1,8 @@
-{% extends "layout.html" %} {% block title %} Forgot Password {% endblock %} {%
-block main %}
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Forgot Password {% endblock %} 
+{% block main %}
+
 <section class="bg-white dark:bg-gray-900">
   <div
     class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
