--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -59,8 +59,12 @@
           </a>
         </div>
       </header>
-      {% endif %} {% block main %}{% endblock %} {% if not
-      session.get('user_id') %}
+      {% endif %}
+
+      <!-- prettier-ignore -->
+      {% block main %} {% endblock %} 
+
+      {% if not session.get('user_id') %}
       <footer
         class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t dark:border-gray-800">
         <p
