--- a/src/templates/sign-up.html
+++ b/src/templates/sign-up.html
@@ -1,5 +1,8 @@
-{% extends "layout.html" %} {% block title %} Sign Up{% endblock %} {% block
-main %}
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Sign Up {% endblock %} 
+{% block main %}
+
 <section class="dark:bg-gray-900 border-red-500">
   <div
     class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
@@ -10,7 +13,10 @@ main %}
           class="mb-1 text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
           Create an account
         </h1>
-        <form class="space-y-4 md:space-y-6" action="/sign-up" method="post">
+        <form
+          class="space-y-4 md:space-y-6"
+          action="{{ url_for('sign_in') }}"
+          method="post">
           <div>
             <label
               for="email"
@@ -18,7 +24,10 @@ main %}
               >Continue with your email</label
             >
 
-            {% include "includes/email-field.html" %} {% if error %}
+            {% include "includes/email-field.html" %}
+
+            <!-- prettier-ignore -->
+            {% if error %}
             <p id="error" class="text-red-500 mt-2 font-medium text-sm">
               {{ error }}
             </p>
