--- a/src/templates/user-profile.html
+++ b/src/templates/user-profile.html
@@ -1,20 +1,25 @@
-{% extends "layout.html" %} {% block title %} Profile {% endblock %} {% block
-main %} {% include "includes/dashboard-header.html" %} {% include
-"includes/dashboard-sidebar.html" %}
+<!-- prettier-ignore -->
+{% extends "layout.html" %} 
+{% block title %} Profile {% endblock %} 
+{% block main %} 
+
+{% include "includes/dashboard-header.html" %} 
+{% include "includes/dashboard-sidebar.html" %}
+
 <main
   class="antialiased bg-gray-50 dark:bg-gray-900 h-auto mt-[76px] max-w-[calc(1440px_-_15rem)] md:ml-60 2xl:mx-auto xl:px-4">
   <div
     class="grid grid-cols-1 md:px-4 xl:grid-cols-3 xl:gap-4 dark:bg-gray-900">
     <div class="col-span-full xl:col-auto">
       <div
-        class="p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm 2xl:col-span-2 dark:border-gray-700 sm:p-6 dark:bg-gray-800">
+        class="sticky top-[76px] p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm 2xl:col-span-2 dark:border-gray-700 sm:p-6 dark:bg-gray-800">
         <div
           class="items-center sm:flex xl:block sm:space-x-4 xl:space-x-0 2xl:space-x-4">
           <img
             id="profile-image"
             class="mb-4 rounded-lg w-28 h-28 md:w-40 md:h-[148px] sm:mb-0 xl:mb-4 2xl:mb-0"
-            src="{{ avatar }}"
-            alt="{{ name }}" />
+            src="{% if avatar %}{{ avatar }}{% else %}{{ url_for('static', filename='assets/avatar.png') }}{% endif %}"
+            alt="{{ first_name }}" />
           <div>
             <h3 class="mb-1 text-xl font-bold text-gray-900 dark:text-white">
               Profile picture
@@ -42,22 +47,14 @@ main %} {% include "includes/dashboard-header.html" %} {% include
                 Upload picture
               </button>
               <input type="file" id="fileInput" style="display: none" />
-              {% if avatar == '/static/assets/avatar.png' %}
+              <!-- prettier-ignore -->
               <button
-                disabled
+                {% if avatar is none %} disabled {% endif %}
                 id="delete-profile"
                 type="button"
                 class="inline-flex items-center py-2 px-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 disabled:pointer-events-none disabled:opacity-70">
                 Remove
               </button>
-              {% else %}
-              <button
-                id="delete-profile"
-                type="button"
-                class="inline-flex items-center py-2 px-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 disabled:pointer-events-none disabled:opacity-70">
-                Remove
-              </button>
-              {% endif %}
             </div>
           </div>
         </div>
@@ -84,7 +81,7 @@ main %} {% include "includes/dashboard-header.html" %} {% include
                 name="first_name"
                 id="first_name"
                 value="{{ first_name }}"
-                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 capitalize"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                 required />
             </div>
             <div
@@ -100,7 +97,7 @@ main %} {% include "includes/dashboard-header.html" %} {% include
                 name="last_name"
                 id="last_name"
                 value="{{ last_name }}"
-                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 capitalize"
+                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                 required />
             </div>
             <div
