--- a/src/templates/admin/add-user-modal.html
+++ b/src/templates/admin/add-user-modal.html
@@ -106,7 +106,7 @@
           <div class="items-center py-6 rounded-b">
             <button
               type="submit"
-              class="text-white inline-flex justify-center w-full sm:w-fit items-center bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+              class="text-white inline-flex justify-center w-full sm:w-fit items-center bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 disabled:pointer-events-none disabled:opacity-70">
               <svg
                 class="mr-1 -ml-1 w-6 h-6"
                 fill="currentColor"
