--- a/src/templates/admin/delete-user-modal.html
+++ b/src/templates/admin/delete-user-modal.html
@@ -40,11 +40,9 @@
           Are you sure you want to delete this user?
         </h3>
         <form id="delete-user-form" class="inline-flex items-center">
-          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-          <input type="hidden" name="user_id" id="user-id-input" value="" />
           <button
             type="submit"
-            class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-base px-3 py-2.5 text-center mr-2 dark:focus:ring-red-800">
+            class="inline-flex items-center text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-base px-3 py-2.5 text-center mr-2 dark:focus:ring-red-800 disabled:pointer-events-none disabled:opacity-70">
             Yes, I'm sure
           </button>
         </form>
