--- a/src/templates/admin/user-table.html
+++ b/src/templates/admin/user-table.html
@@ -14,6 +14,7 @@
   <tbody
     class="bg-white divide-y divide-gray-200 dark:bg-gray-800 dark:divide-gray-700">
     {% for user in users.items %}
+    <!-- prettier-ignore -->
     <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
       <td class="flex items-center p-4 mr-12 space-x-6 whitespace-nowrap">
         {% if user.avatar %}
@@ -47,13 +48,14 @@
         </div>
       </td>
       <td
+        class="p-4 text-base font-normal text-gray-900 text-ellipsis whitespace-nowrap dark:text-white capitalize">
+        <!-- prettier-ignore -->
+        {{ employment_data[user.id][0].company if employment_data[user.id] else 'N/A' }}
+      </td>
+      <td
         class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white capitalize">
         <!-- prettier-ignore -->
         {{ employment_data[user.id][0].position if employment_data[user.id] else 'N/A' }}
-      </td>
-      <td
-        class="p-4 text-base font-normal text-gray-900 whitespace-nowrap dark:text-white capitalize">
-        {{ user.role }}
       </td>
 
       <td class="p-4 space-x-2 whitespace-nowrap">
