--- a/src/templates/admin/user-table.html
+++ b/src/templates/admin/user-table.html
@@ -60,7 +60,7 @@
 
       <td class="p-4 space-x-2 whitespace-nowrap">
         <a
-          href="{{ url_for('admin_user_edit', user_id = user.id) }}"
+          href="{{ url_for('admin_user_view', user_id = user.id) }}"
           type="button"
           class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
           <svg
