admin upload avatar api

--- a/src/templates/admin/admin.html
+++ b/src/templates/admin/admin.html
@@ -1,6 +1,6 @@
 <!-- prettier-ignore -->
 {% extends "layout.html" %}
-{% block title %} Admin {{ first_name }} {{ last_name }} {% endblock %} 
+{% block title %} {{ first_name }} {{ last_name }} (Admin) {% endblock %} 
 {% block main %}
 
 <div class="antialiased bg-gray-50 dark:bg-gray-900">
