--- a/src/templates/admin/user-table.html
+++ b/src/templates/admin/user-table.html
@@ -49,13 +49,11 @@
       </td>
       <td
         class="p-4 text-base font-normal text-gray-900 text-ellipsis whitespace-nowrap dark:text-white capitalize">
-        <!-- prettier-ignore -->
-        {{ employment_data[user.id][0].company if employment_data[user.id] else 'N/A' }}
+        {{ employee[user.id].company }}
       </td>
       <td
         class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white capitalize">
-        <!-- prettier-ignore -->
-        {{ employment_data[user.id][0].position if employment_data[user.id] else 'N/A' }}
+        {{ employee[user.id].position }}
       </td>
 
       <td class="p-4 space-x-2 whitespace-nowrap">
